--- a/react/src/views/RegisterView/RegisterView.module.css
+++ b/react/src/views/RegisterView/RegisterView.module.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../../images/backgroundimage.jpg");
+    background-image: url("../../images/background.jpg");
     background-size:cover;
     background-repeat: no-repeat;
 }
