--- a/react/src/views/LoginView/LoginView.module.css
+++ b/react/src/views/LoginView/LoginView.module.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../../images/backround.jpg");
+    background-image: url("../../images/background.jpg") !important;
     background-size:cover;
     background-repeat: no-repeat;
 }
@@ -8,7 +8,6 @@ body{
     width: 300px;
     font-size: medium;
     border: 0;
-    background-color: transparent;
     margin-right: 10px;
     font-weight: 100;
 }
