--- a/react/src/views/CreateCampaignView/CreateCampaignView.module.css
+++ b/react/src/views/CreateCampaignView/CreateCampaignView.module.css
@@ -3,13 +3,14 @@
     margin: 0;
     text-align: center;
 }
-.innerDiv{
+
+.innerDiv {
     display: flex;
     justify-content: space-evenly;
     margin: 0;
 }
 
-.leftPanel{
+.leftPanel {
     flex: 1;
     background: linear-gradient(rgb(129, 154, 145), rgb(167, 193, 168));
     height: 100vh;
@@ -17,18 +18,19 @@
     color: rgb(255, 255, 255);
 }
 
-.campaigntext{
+.campaigntext {
     font-size: xx-large;
     font-weight: bold;
     margin-bottom: 20px;
 }
 
-.rightPanel{
+.rightPanel {
     flex: 2;
     height: 100vh;
     border-top-left-radius: 60px;
     border-bottom-left-radius: 60px;
     background-color: aliceblue;
+    color: rgb(33, 33, 33);
     height: 100vh;
     align-content: center;
 }
@@ -37,35 +39,90 @@
     width: 200px;
 }
 
-.campaignform{
+.campaignform {
     align-content: center
 }
 
-.field{
-    width: 300px;
+.field {
+    width: 500px;
 }
 
-.formtitle{
+.datefield {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* aligns children to the left */
+    margin-bottom: 1.2rem;
+    max-width: 250px;
+}
+
+.datefield input[type="date"] {
+    padding: 0.5rem 0.75rem;
+    font-size: 1rem;
+    border: 1.5px solid #ccc;
+    border-radius: 6px;
+    background-color: #fff;
+    transition: border-color 0.2s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+}
+
+.datefield input[type="date"]:focus {
+    outline: none;
+    border-color: #4a90e2;
+    /* nice blue highlight */
+    box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
+}
+
+.datefield input[type="date"]::-webkit-datetime-edit {
+    color: #555;
+}
+
+.form {
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start; 
+    margin: 0 auto 1.5rem auto;
+    max-width: 250px; 
+    width: 100%; 
+  }
+  
+  .formtitle {
+    font-weight: 400;
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 0.5rem; 
+    text-align: left;
+    align-self: flex-start;
+  }
+
+  .formtitle {
     font-size: large;
-    color: grey;
+    color: rgb(33, 33, 33);
     margin-bottom: 5px;
 }
-.form{
-    margin: 30px;
+.formButton {
+    width: 150px;
+    height: 30px;
+    background-color: rgb(129, 154, 145);
+    font-weight: bold;
+    color: aliceblue;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-.datefields{
+.datefields {
     display: flex;
     justify-content: center;
 }
 
-.datefield{
+.datefield {
     margin-right: 15px;
 }
 
 
 
-.header{
+.header {
     margin-top: -150px;
     font-size: xx-large;
     margin-bottom: 200px;
@@ -75,30 +132,26 @@
     box-sizing: border-box;
     padding-left: 0.875rem;
     margin: 0;
-    border: 2px solid grey;
-    width: 100%;
-    max-width: 16rem;
+    border: 1.5px solid #ccc;
+    width: 250px;
     height: 2.5rem;
     border-radius: 0.375rem;
     font-family: inherit;
     font-size: 1rem;
     font-weight: normal;
-    background-color: transparent;
+    background-color: #fff;
     color: var(--color-gray-900);
-  
+    transition: border-color 0.2s ease, box-shadow 0.3s ease;
+
+
     &:focus {
-      outline: 2px solid var(--color-blue);
-      outline-offset: -1px;
+        outline: none;
+        border-color: #4a90e2;
+        /* nice blue highlight */
+        box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
     }
-  }
+}
 
-  .bottomsection{
+.bottomsection {
     margin: 20px
-  }
-
-  .formButtonRight{
-    width: 150px;
-    height: 30px;
-  }
-
-  
+}
