--- a/react/src/views/CreateCampaignView/CreateCampaignView.module.css
+++ b/react/src/views/CreateCampaignView/CreateCampaignView.module.css
@@ -152,6 +152,31 @@
     }
 }
 
+.description {
+    box-sizing: border-box;
+    padding-left: 0.875rem;
+    margin: 0;
+    border: 1.5px solid #ccc;
+    width: 250px;
+    height: 2.5rem;
+    min-height: 150px;
+    border-radius: 0.375rem;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: normal;
+    background-color: #fff;
+    color: var(--color-gray-900);
+    transition: border-color 0.2s ease, box-shadow 0.3s ease;
+
+
+    &:focus {
+        outline: none;
+        border-color: #4a90e2;
+        /* nice blue highlight */
+        box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
+    }
+}
+
 .bottomsection {
     margin: 20px
 }
