--- a/react/src/views/RegisterView/RegisterView.module.css
+++ b/react/src/views/RegisterView/RegisterView.module.css
@@ -33,7 +33,9 @@
     margin: auto;
     align-items: center;
     height: 100vh;
-    
+    background: linear-gradient(to bottom left, rgb(129, 154, 145), rgb(167, 193, 168));
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .formcontainer{
     margin: 10px;
