--- a/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
+++ b/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
@@ -2,13 +2,13 @@
     height: 100vh;
     margin: 100px;
     margin-left: 400px;
-    margin-right: 400px;
+    margin-right: 20px;
     display: grid;
-    grid-template-columns: 1.5fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-areas: 
-        "title title ."
-        "img img donateBox"
-        "description description donateBox";
+        "title . ."
+        "img . donateBox"
+        "description . donateBox";
 }
 .infoBox{
     display: flex;
@@ -24,17 +24,60 @@
 .image {
     grid-area: img;
     object-fit: cover;
+    border-radius: 10px;
 }
 .donateBox {
     grid-area: donateBox;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: cornflowerblue;
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     height: 500px;
     width: 350px;
-    margin-top: 20px;
+    margin-top: 32px;
+    box-shadow: 0 4px 12px rgba(175, 175, 175, 0.49);
+}
+.boxHeader{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+.progressText {
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+    color: black;
+    font-size: 1.5rem;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 20px;
+}
+
+.donationGoal{
+    padding-top: 5px;
+    font-size: medium;
+}
+
+.progressCircle{
+    height: 120px;
+    display: flex;
+    margin-right: 20px;
+    right: 0;
+    flex: 1;
+    font-weight: 600;
+}
+
+.donateButton {
+    width: 280px;
+    height: 50px;
+    background-color: #477549; /* Green */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2rem;
+    margin-top: 25px;
 }
 .description {
     grid-area: description;
@@ -45,15 +88,14 @@
 
 .campaignInfo {
     height: 100vh;
-    background-color: rgb(129, 129, 129);
-
+    border-radius: 10px;
 }
 
 .campaignDonate{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: aliceblue;
+    align-items: left;
+    
 }
 
 
