continued CampaignDetails css

--- a/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
+++ b/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
@@ -12,7 +12,7 @@
 }
 .infoBox{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
 }
@@ -79,11 +79,12 @@
     font-size: 1.2rem;
     margin-top: 25px;
 }
-.description {
+.desc {
     grid-area: description;
-    padding: 20px;
-    font-size: 1.2rem;
+    font-size: larger;
     line-height: 1.5;
+    align-content: flex-start;
+    margin-right: 50px;
 }
 
 .campaignInfo {
@@ -98,7 +99,33 @@
     
 }
 
-
+.creator {
+    font-size: larger;
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-bottom: 5px;
+}
 
 .progressBar {
+}
+
+.infoHeader {
+    display: flex;
+    justify-content: center;
+    width: 89%;
+    text-wrap: wrap;
+    margin-bottom: 7px;
+}
+
+.line {
+    width: 89%;
+    border: 1px solid #477549;
+    margin-left: -2px;
+}
+
+.donors {
+    width: 100%;
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 68px;
 }
