--- a/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
+++ b/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
@@ -79,6 +79,18 @@
     font-size: 1.2rem;
     margin-top: 25px;
 }
+
+.editButton {
+    width: 280px;
+    height: 50px;
+    background-color: #659dd5; /* Green */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2rem;
+    margin-top: 25px;
+}
 .desc {
     grid-area: description;
     font-size: larger;
