--- a/react/src/views/UpdateCampaign/UpdateCampaignView.module.css
+++ b/react/src/views/UpdateCampaign/UpdateCampaignView.module.css
@@ -150,20 +150,33 @@
     margin-bottom: 5px;
 }
 .formButton {
-    width: 150px;
-    height: 30px;
+    width: 200px;
+    height: 40px;
     background-color: rgb(129, 154, 145);
     font-weight: bold;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: color 0.2s ease;
+    transition: color 0.1s ease;
 }
 .formButton:hover {
     color: rgb(33, 33, 33);
 }
-
+.deleteButton {
+    width: 200px;
+    height: 40px;
+    background-color: rgb(173, 44, 35);
+    font-weight: bold;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: color 0.1s ease;
+}
+.deleteButton:hover {
+    color: rgb(33, 33, 33);
+}
 .datefields {
     display: flex;
     justify-content: center;
