--- a/react/src/views/HomeView/HomeView.module.css
+++ b/react/src/views/HomeView/HomeView.module.css
@@ -6,10 +6,13 @@
 
 .ccButton {
     background-color: #5c0e0a;
+    height: 40px;
+    width: 150px;
     margin-right: 10px;
     margin-top: 10px;
     color: white;
-    border-radius: 20px;
+    border-radius: 50px;
+    font-weight: 600;
 }
 
 .Link {
