--- a/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
+++ b/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
@@ -37,6 +37,7 @@
     width: 350px;
     margin-top: 32px;
     box-shadow: 0 4px 12px rgba(175, 175, 175, 0.49);
+    margin-bottom: 10px;
 }
 .boxHeader{
     display: flex;
@@ -137,7 +138,15 @@
 
 .donors {
     width: 100%;
-    text-align: left;
-    margin-top: 20px;
-    margin-left: 68px;
+    text-align: center;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.pollbox{
+    box-shadow: 0 4px 12px rgba(175, 175, 175, 0.49);
+    border-radius: 10px;
+    width: 350px;
+    text-wrap: wrap;
 }
