--- a/react/src/components/CampaignCard/CampaignCard.module.css
+++ b/react/src/components/CampaignCard/CampaignCard.module.css
@@ -7,6 +7,13 @@
     background-color: white;
 }
 
+.campaignTitle{
+    font-size: xx-large;
+    font-weight: bold;
+    margin: 10px;
+    text-align: center;
+}
+
 .title{
     font-size: large;
     margin: 10px;
