--- a/react/src/views/LoginView/LoginView.module.css
+++ b/react/src/views/LoginView/LoginView.module.css
@@ -1,22 +1,49 @@
 
 
 .field {
+    box-sizing: border-box;
+    padding-left: 0.875rem;
+    margin: 0;
+    border: 1.5px solid #ccc;
     width: 300px;
-    font-size: medium;
-    border: 0;
-    margin-right: 10px;
-    font-weight: 100;
+    height: 2.5rem;
+    border-radius: 0.375rem;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: normal;
+    background-color: #fff;
+    color: var(--color-gray-900);
+    transition: border-color 0.2s ease, box-shadow 0.3s ease;
+
+
+    &:focus {
+        outline: none;
+        border-color: #4a90e2;
+        /* nice blue highlight */
+        box-shadow: 0 0 5px rgba(74, 144, 226, 0.5);
+    }
 }
 
-.field:focus {
-    outline: none;
+.formtitle {
+    font-weight: 400;
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 0.5rem; 
+    text-align: left;
+    align-self: flex-start;
+  }
+
+  .formtitle {
+    font-size: large;
+    color: rgb(33, 33, 33);
+    margin-bottom: 5px;
 }
 
 .logintext {
     text-align: center;
     color: rgb(64, 116, 64);
     font-weight: bold;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .form {
@@ -24,6 +51,18 @@
     border-radius: 30px;
     padding: 80px;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.formcontrol{
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column; 
+        align-items: flex-start; 
+        width: 100%; 
+      
 }
 
 .maindiv {
@@ -37,23 +76,6 @@
     background-repeat: no-repeat;
 }
 
-.formcontrol {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid grey;
-    width: fit-content;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 10px;
-    align-items: center;
-
-}
-
-.fieldtext {
-    text-align: left;
-    margin-left: -150px;
-    color: rgb(73, 72, 72);
-}
 
 .bottomsection {
     display: flex;
@@ -68,6 +90,7 @@
     background-color: rgb(64, 116, 64);
     color: white;
     border: 0;
+    font-weight: bold;
 }
 
 .loginimage {
