--- a/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
+++ b/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
@@ -152,3 +152,14 @@
     width: 350px;
     text-wrap: wrap;
 }
+
+.alerts {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    z-index: 9999; 
+}
+  
