--- a/react/src/views/UpdateCampaign/UpdateCampaignView.module.css
+++ b/react/src/views/UpdateCampaign/UpdateCampaignView.module.css
@@ -266,3 +266,22 @@
     align-items: center;
     justify-content: center;
 }
+
+.alerts {
+    position: fixed;
+    top: 20px;
+    left: 66.5%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    z-index: 9999; 
+}
+.deleteAlert {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    z-index: 9999; 
+}
