--- a/react/src/components/MainNav/MainNav.module.css
+++ b/react/src/components/MainNav/MainNav.module.css
@@ -7,10 +7,36 @@
     align-items: center;
 }
 
-.navlink{
-    margin-left: 10px;
+.navlink {
+    position: relative;
+    margin-left: 30px;
     color: black;
+    text-decoration: none;
+    transition: color 0.3s ease;
 }
+
+.navlink::after {
+    content: '';
+    position: absolute;
+    bottom: -3px; /* Adjust to move underline */
+    left: 50%;
+    transform: translateX(-50%) scaleX(0);
+    transform-origin: center;
+    width: 100%;
+    height: 2px;
+    background-color: currentColor;
+    transition: transform 0.2s ease;
+}
+
+.navlink:hover::after {
+    transform: translateX(-50%) scaleX(1);
+}
+
+
+.navlink:hover {
+    color: rgb(64, 116, 64); /* Optional, keep color same on hover */
+}
+
 
 .navtext{
     color: black;
