--- a/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
+++ b/react/src/views/CampaignDetailsView/CampaignDetailsView.module.css
@@ -160,14 +160,10 @@
     flex-direction: column;
     z-index: 9999; 
 }
-
-fieldset{
-    width: 100px;
-    display: flex;
-}
   
 .polleditButton{
     width: 280px;
+    height: 50px;
     background-color: #659dd5; /* Green */
     color: white;
     border: none;
