--- a/react/src/views/HomeView/HomeView.module.css
+++ b/react/src/views/HomeView/HomeView.module.css
@@ -5,12 +5,14 @@
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-
+    grid-template-rows: 1fr auto 1fr;
     align-items: center;
     justify-items: center;
     grid-template-areas:
         "topSection topSection topSection"
-        "leftSection middleSection rightSection";
+        "leftSection middleSection rightSection"
+        "bottomSection bottomSection bottomSection";
+    overflow-y: none;
 }
 
 .rightTrellis {
@@ -40,7 +42,6 @@
 
 .topSection {
     grid-area: topSection;
-    margin-top: -100px;
     background-color: #fff;
     justify-content: center;
     align-items: center;
@@ -62,7 +63,6 @@
 .leftSection,
 .rightSection,
 .middleSection {
-    margin-top: -400px;
     z-index: 5;
 }
 
@@ -91,6 +91,11 @@
     align-items: center;
     padding: 15px;
     
+}
+
+.rightInfo{
+    line-height: 25px;
+    padding-bottom: 10px;
 }
 
 /* .innerRightSection {
@@ -126,6 +131,20 @@
 .middleSection:hover {
     transform: scale(1.05);
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+}
+
+.bottomSection{
+    grid-area: bottomSection;
+    max-width: 600px;
+    max-height: 200px;
+    font-size: 1.2rem;
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.554);
+    display: flex;
+    flex-direction: row;
+
+    padding: 15px;
 }
 
 .Link {
