--- a/react/src/views/HomeView/HomeView.module.css
+++ b/react/src/views/HomeView/HomeView.module.css
@@ -19,18 +19,18 @@
     position: fixed;
     top: 42px;
     right: 0;
-    width: 300px;
+    width: 287px;
     height: 100vh;
-    background-image: url('../../images/trellis.png');
+    background-image: url('../../images/halftrellis1.png');
 }
 
 .leftTrellis {
     position: fixed;
     top: 42px;
     left : 0;
-    width: 300px;
+    width: 287px;
     height: 100vh;
-    background-image: url('../../images/trellis.png');
+    background-image: url('../../images/halftrellis2.png');
 }
 
 
