--- a/react/src/views/UserProfileView/UserProfileView.module.css
+++ b/react/src/views/UserProfileView/UserProfileView.module.css
@@ -1,5 +1,59 @@
-.maindiv {
+html, body, #root {
+    margin: 0;
+    padding: 0;
     height: 100vh;
-    margin: 80px;
-}
-
+    overflow: hidden;
+  }
+  
+  .pageWrapper {
+    display: flex;
+    height: 100vh;  
+    box-sizing: border-box;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to bottom left, rgb(129, 154, 145), rgb(167, 193, 168));
+  }
+  
+  .leftColumn {
+    width: 300px;
+    height: 100%;
+    background-image: url('../../images/trellisSideLeft.png'); 
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: left top;
+    margin: 0;
+    padding: 0;
+  }
+  
+  
+  .trellisImage {
+    width: auto;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+  
+  .rightColumn {
+    flex: 1;
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+  }
+  
+  .greeting {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+  }
+  
+  .inspiration {
+    font-size: 1.2rem;
+    max-width: 500px;
+    line-height: 1.6;
+    color: #333;
+  }
+  
